--- a/index.html
+++ b/index.html
@@ -10,147 +10,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=bolt" />
+    <link rel="stylesheet" href="/index.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<style>
-    *{
-        background-color: black;
-        color:white;
-        text-align: center;
-    }
-    nav {
-        width: 100%;
-    }
-
-    nav > ul{
-        display: flex;
-        list-style-type: none;
-        justify-content: space-between;
-        padding: 5px;
-    }
-
-    .hr-text {
-    line-height: 1em;
-    position: relative;
-    border: 0;
-    text-align: center;
-    opacity: .8;
-    &:before {
-        content: '';
-        background: linear-gradient(to right, transparent, white, transparent);
-        position: absolute;
-        left: 0;
-        top: 50%;
-        width: 100%;
-        height: 1px;
-    }
-    &:after {
-        content: attr(data-content);
-        position: relative;
-        padding: 0 .5em;
-        color: white;
-        background-color: black;
-    }
-    }
-
-.topleft {
-  position: relative;
-  top: 0px;
-  /* left: -30%; */
-  font-size: 18px;
-  min-height: 5%;
-  width: 20%;
-  background-color: rgb(1, 88, 59);
-  border: 2px solid;
-  border-radius: 30%;
-  vertical-align: middle;
-  text-align: center;
-}
-.container {
-    position: relative;
-}
-.pad-5{
-    padding:5px;
-}
-.pad-10{
-    padding:10px;
-}
-.flex{
-    display: flex;
-    justify-content: space-between;
-}
-.center-container{
-    text-align: center;
-    width: 70%;
-    margin:auto;
-    border:2px solid white;
-    border-radius: 10px;
-}
-.project > img{
-    width: 100%;
-}
-</style>
 <body>
-    <nav>
-        <ul>
+    <nav class="container margin-bottom-0">
+        <ul>            
             <li>
-                <button>
-                    Icon Legend
-                </button>
-            </li>
-            <li>
-                <a href="https://github.com/DRGNCoDR" target="_blank">
+                <a href="https://github.com/DRGNCoDR" target="_blank" class="btn btn-primary">
                     Github
                 </a>
             </li>
             <li>
-                <button>
+                <button class="btn btn-primary" >
                     Cotact
                 </button>
             </li>
         </ul>
     </nav>
-    <div class="center-container pad-10">
-        <div >
-        <h2 class="name">DRGNCoDR</h2>
+    <div class="container center-container border-2White pad-10">
+        <div class="col-12">
+        <h3 class="name">DRGNCoDR</h2>
         <h3 class="profession">Application Software Developer</h3>
         <p>An application software developer with over 5 years of experience, in a variety of languages, frameworks, and APIs.</p>
-    </div>
-<div>
+        </div>
+    <div>
     <hr class="hr-text"  data-content="Projects">
-</div>
-<div class="flex pad-10">
-    <div class="project">
-        <span class="material-symbols-outlined topleft">bolt</span>
-        <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt="" width="30%" height="auto">
-        <h3>Project1</h3>
-        <p>Description</p>
-        <div class="">
-            <button>Demo</button>
-            <button>See Code</button>
-        </div>
-    </div>
-    <div class="project">
-        <span class="material-symbols-outlined topleft"></span>
-        <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt="" width="30%" height="auto">
-        <h3>Project1</h3>
-        <p>Description</p>
-        <div class="">
-            <button>Demo</button>
-            <button>See Code</button>
-        </div>
-    </div>
-    <div class="project">
-        <span class="material-symbols-outlined topleft">bolt</span>
-        <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt="" width="30%" height="auto">
-        <h3>Project1</h3>
-        <p>Description</p>
-        <div class="">
-            <button>Demo</button>
-            <button>See Code</button>
-        </div>
-    </div>
-</div>
-    </div>
 
+    <div id="carouselProjects" class="carousel slide">
+        <div class="carousel-indicators center-container margin-bottom-0 ">
+            <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Project 1"></button>
+            <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="1" aria-label="Project 2"></button>
+            <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="2" aria-label="Project 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active project">
+                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt="" class="d-block col-9 center-container border-2White">
+                <div class="carousel-caption d-none d-md-block projectBackground">
+                    <h5>Project</h5>
+                    <p>Some representative placeholder content for the first slide.</p>
+                    <div class="">
+                        <button class="btn btn-primary">Demo</button>
+                        <button class="btn btn-primary">See Code</button>
+                    </div>
+                </div>
+            </div>            
+            <div class="carousel-item project">
+                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt=""  class="d-block col-9 center-container border-2White">        
+                <div class="carousel-caption d-none d-md-block projectBackground">
+                    <h5>Project</h5>
+                    <p>Some representative placeholder content for the second slide.</p>
+                    <div class="">
+                        <button class="btn btn-primary">Demo</button>
+                        <button class="btn btn-primary">See Code</button>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item project">
+                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt=""  class="d-block col-9 center-container border-2White">        
+                <div class="carousel-caption d-none d-md-block projectBackground">
+                    <h5>Project</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                    <div>
+                        <button class="btn btn-primary">Demo</button>
+                        <button class="btn btn-primary">See Code</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselProjects" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselProjects" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
 </html>
