--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>DRGNCoDR Portfolio</title>
     <meta charset="utf-8">
@@ -14,66 +13,107 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="container margin-bottom-0">
+    <nav class="container">
         <ul>            
             <li>
-                <a href="https://github.com/DRGNCoDR" target="_blank" class="btn btn-primary">
+                <a 
+                    href="https://github.com/DRGNCoDR" 
+                    target="_blank" 
+                    class="btn btn-primary"
+                >
                     Github
                 </a>
             </li>
             <li>
-                <button class="btn btn-primary" >
+                <button 
+                    class="btn btn-primary" 
+                >
                     Cotact
                 </button>
             </li>
         </ul>
     </nav>
-    <div class="container center-container border-2White pad-10">
-        <div class="col-12">
-        <h3 class="name">DRGNCoDR</h2>
-        <h3 class="profession">Application Software Developer</h3>
-        <p>An application software developer with over 5 years of experience, in a variety of languages, frameworks, and APIs.</p>
-        </div>
-    <div>
-    <hr class="hr-text"  data-content="Projects">
-
-    <div id="carouselProjects" class="carousel slide">
-        <div class="carousel-indicators center-container margin-bottom-0 ">
+    <div class="container">
+        <div class="center-text">
+            <h2 class="name">
+                DRGNCoDR
+            </h2>
+            <h4 class="profession">
+                Application Software Developer
+            </h4>
+            <p>
+                An application software developer with over 5 years of experience, in a variety of languages, frameworks, and APIs. 
+            </p>
+    </div>
+    <div class="container">
+    <hr class="hr-text center-text"  data-content="Projects">
+    <div id="carouselProjects" class="carousel slide container">
+        <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Project 1"></button>
             <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="1" aria-label="Project 2"></button>
             <button type="button" data-bs-target="#carouselProjects" data-bs-slide-to="2" aria-label="Project 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active project">
-                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt="" class="d-block col-9 center-container border-2White">
-                <div class="carousel-caption d-none d-md-block projectBackground">
-                    <h5>Project</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                    <div class="">
-                        <button class="btn btn-primary">Demo</button>
-                        <button class="btn btn-primary">See Code</button>
-                    </div>
-                </div>
-            </div>            
-            <div class="carousel-item project">
-                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt=""  class="d-block col-9 center-container border-2White">        
-                <div class="carousel-caption d-none d-md-block projectBackground">
-                    <h5>Project</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                    <div class="">
-                        <button class="btn btn-primary">Demo</button>
-                        <button class="btn btn-primary">See Code</button>
-                    </div>
+            <div class="carousel-item active project ">
+                <img 
+                src="https://storage.googleapis.com/pod_public/1300/175822.jpg" 
+                alt=""  
+                class="d-block col-5 m-auto "
+                height="500px">        
+            <div class="carousel-caption d-none d-md-block container col-5">
+                <h5>SEO Tag Generator</h5>
+                <p>This app was developed to assist with creation of site tags for SEO using Java. It allows you to enter in two key words and it will append and prepend the different permutations.</p>
+                <div class=" container col-12">
+                    <button class="btn btn-primary col-4 mx-2">Demo</button>
+                    <a 
+                        href = "https://github.com/DRGNCoDR/Project_Archive/tree/main/Java/Java-Tag-Generator-master/TagGenerator" 
+                        class="btn btn-primary col-4"
+                        target = "_blank"
+                    >
+                        See Code
+                    </a>
                 </div>
             </div>
+            </div>            
             <div class="carousel-item project">
-                <img src="https://storage.googleapis.com/pod_public/1300/175822.jpg" alt=""  class="d-block col-9 center-container border-2White">        
-                <div class="carousel-caption d-none d-md-block projectBackground">
-                    <h5>Project</h5>
+                <img 
+                src="/taxApp.png" 
+                alt=""  
+                class="d-block col-5 m-auto "
+                height="500px">        
+            <div class="carousel-caption d-none d-md-block container col-5">
+                <h5>Tax Calculator Application</h5>
+                <p>A tax calcutlator application that was developed for the National Retirement Group. This application allowed users to enter in fields like income, filing status, etc. and compare between 3 different estimates. Developed in Svelte.js this application is viewable by request only.</p>
+                <!-- <div class=" container col-12">
+                    <a 
+                        href = "#" 
+                        class="btn btn-primary col-4"
+                        target = "_blank"
+                    >
+                        Demo
+                    </a>
+                    <a 
+                        href = "#" 
+                        class="btn btn-primary col-4"
+                        target = "_blank"
+                    >
+                        See Code
+                    </a>
+                </div> -->
+            </div>
+            </div>
+            <div class="carousel-item project">
+                <img 
+                    src="https://storage.googleapis.com/pod_public/1300/175822.jpg" 
+                    alt=""  
+                    class="d-block col-5 m-auto "
+                    height="500px">        
+                <div class="carousel-caption d-none d-md-block container col-5">
+                    <h5>Project 3</h5>
                     <p>Some representative placeholder content for the third slide.</p>
-                    <div>
-                        <button class="btn btn-primary">Demo</button>
-                        <button class="btn btn-primary">See Code</button>
+                    <div class=" container col-12">
+                        <button class="btn btn-primary col-4 mx-2">Demo</button>
+                        <button class="btn btn-primary col-4">See Code</button>
                     </div>
                 </div>
             </div>
@@ -88,5 +128,7 @@
         </button>
     </div>
 </body>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
+
 </html>
