--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="container">
-        <ul>            
+    <nav class="container py-2">
+        <ul >            
             <li>
                 <a 
                     href="https://github.com/DRGNCoDR" 
@@ -33,8 +33,11 @@
             </li>
         </ul>
     </nav>
-    <div class="container">
-        <div class="center-text">
+    <div 
+        class="container  border-2 py-2" 
+        style="background-color: #343a40 !important;"
+    >
+        <div class="center-text border-2 my-2">
             <h2 class="name">
                 DRGNCoDR
             </h2>
@@ -45,7 +48,7 @@
                 An application software developer with over 5 years of experience, in a variety of languages, frameworks, and APIs. 
             </p>
     </div>
-    <div class="container">
+    <div class="container border-2 col-11">
     <hr class="hr-text center-text"  data-content="Projects">
     <div id="carouselProjects" class="carousel slide container">
         <div class="carousel-indicators">
@@ -56,15 +59,15 @@
         <div class="carousel-inner">
             <div class="carousel-item active project ">
                 <img 
-                src="https://storage.googleapis.com/pod_public/1300/175822.jpg" 
+                src="/tag gen.png" 
                 alt=""  
                 class="d-block col-5 m-auto "
                 height="500px">        
             <div class="carousel-caption d-none d-md-block container col-5">
-                <h5>SEO Tag Generator</h5>
+                <h5>SEO Tag Generator (Console Application)</h5>
                 <p>This app was developed to assist with creation of site tags for SEO using Java. It allows you to enter in two key words and it will append and prepend the different permutations.</p>
                 <div class=" container col-12">
-                    <button class="btn btn-primary col-4 mx-2">Demo</button>
+                    
                     <a 
                         href = "https://github.com/DRGNCoDR/Project_Archive/tree/main/Java/Java-Tag-Generator-master/TagGenerator" 
                         class="btn btn-primary col-4"
@@ -82,24 +85,8 @@
                 class="d-block col-5 m-auto "
                 height="500px">        
             <div class="carousel-caption d-none d-md-block container col-5">
-                <h5>Tax Calculator Application</h5>
-                <p>A tax calcutlator application that was developed for the National Retirement Group. This application allowed users to enter in fields like income, filing status, etc. and compare between 3 different estimates. Developed in Svelte.js this application is viewable by request only.</p>
-                <!-- <div class=" container col-12">
-                    <a 
-                        href = "#" 
-                        class="btn btn-primary col-4"
-                        target = "_blank"
-                    >
-                        Demo
-                    </a>
-                    <a 
-                        href = "#" 
-                        class="btn btn-primary col-4"
-                        target = "_blank"
-                    >
-                        See Code
-                    </a>
-                </div> -->
+                <h5>Tax Calculator Application (Client Application)</h5>
+                <p>A tax calcutlator application that was developed for the National Retirement Group. This application allowed users to enter in fields like income, filing status, etc. and compare between 3 different estimates. Developed in Svelte.js this application is <strong><i>viewable by request only</i></strong>.</p>                
             </div>
             </div>
             <div class="carousel-item project">
